1-workshop-rht-app/base/workshop-rht-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workshop-rht-app
  name: workshop-rht-app
  namespace: test-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: workshop-rht-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: workshop-rht-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/test-app/workshop-rht-app:latest
        imagePullPolicy: IfNotPresent
        name: workshop-rht-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workshop-rht-app
  name: workshop-rht-app
  namespace: test-app
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    deployment: workshop-rht-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: workshop-rht-app
  name: workshop-rht-app
  namespace: test-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: workshop-rht-app
    weight: 100
  wildcardPolicy: None
---
